WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75240
[Refactoring] Node::setTreeScopeRecursively() doesn't need includeRoot parameter
https://bugs.webkit.org/show_bug.cgi?id=75240
Summary
[Refactoring] Node::setTreeScopeRecursively() doesn't need includeRoot parameter
Hajime Morrita
Reported
2011-12-26 21:52:06 PST
Anyone no longer uses it. So we can remove it safely.
Attachments
Patch
(2.48 KB, patch)
2011-12-26 22:01 PST
,
Hajime Morrita
andersca
: review+
andersca
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2011-12-26 22:01:19 PST
Created
attachment 120564
[details]
Patch
Hajime Morrita
Comment 2
2011-12-26 23:13:44 PST
Committed
r103701
: <
http://trac.webkit.org/changeset/103701
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug