[Refactoring] Node::setTreeScopeRecursively() doesn't need includeRoot parameter https://bugs.webkit.org/show_bug.cgi?id=75240

Reviewed by Anders Carlsson.

No new tests. No behavior change.

* dom/Node.cpp:
(WebCore::Node::setTreeScopeRecursively):
* dom/Node.h:

Canonical link: https://commits.webkit.org/92006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103701 268f45cc-cd09-0410-ab3c-d52691b4dbfc